# cherry

./: Cargo.toml  README.md  config.ron  config.toml  notes.md
scripts/: start.sh
src/: config.rs  editor.rs  error.rs  frame_buffer.rs  keymap.rs  lib.rs  main.rs  status_bar.rs  terminal.rs  text_buffer.rs  text_buffer.rs.bak  util.rs
src/editor/: action.rs  mod.rs
src/frame_buffer/: mod.rs  text_buffer.rs
