[package]
name = "cherry-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "cherry"
path = "src/lib.rs"

[[bin]]
name = "cherry"
path = "src/main.rs"

[dependencies]
crossterm = "0.24.0"
lazy_static = "1.4.0"
ron = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.31"
